# coco_toolkit

./: README.md  pyproject.toml  tox.ini
.github/workflows/: package_testing.yaml
coco_tookit/: __init__.py
coco_tookit/helper/: merge.py  preprocess.py
coco_toolkit/convertors/: converter.py
coco_toolkit/helper/: merge.py  preprocess.py  report.py
coco_toolkit/modules/: cocoviewer.py  voc2coco.py
tests/: test_coco_toolkit.py
tests/coco_dataset/annotations/: Unique_id_images_2022-07-16-03-15-13.json  added_segmentation_2022-07-16-03-48-20.json  coco.json  extracted_dataset_2022-07-16-03-07-18.json  filtered_dataset_2022-07-16-03-48-20.json  removed_segmentation_2022-07-16-03-40-50.json  unique_id_annotation_2022-07-16-03-07-18.json  unique_id_category_2022-07-16-03-40-50.json
tests/coco_dataset/annotations/image_name_change_2022-07-16-02-01-27/annotations/: image_name_change.json
tests/coco_dataset/annotations/image_name_change_2022-07-16-03-07-18/annotations/: image_name_change.json
tests/coco_dataset_1/annotations/: coco.json
